# ai-overlord

./: .gitignore  LICENSE  README.md  Start AI Overlord.bat  Start AI Overlord.command  conftest.py  launch.py  start-ai-overlord.sh
backend/: pyproject.toml
backend/app/: __init__.py  config.py  hitl.py  keystore.py  log.py  main.py  user_settings.py
backend/app/agents/: __init__.py  bus.py  council.py  roles.py
backend/app/autonomy/: __init__.py  goals.py  loop.py  self_improve.py
backend/app/memory/: __init__.py  consolidation.py  episodic.py  knowledge_graph.py  semantic.py
backend/app/providers/: __init__.py  _http.py  base.py  cerebras.py  demo.py  google.py  groq.py  mistral.py  nvidia.py  openrouter.py  registry.py  router.py  together.py
backend/app/reasoning/: __init__.py  constitutional.py  debate.py  deliberate.py  reflexion.py  tree_of_thoughts.py
backend/app/routes/: __init__.py  agents.py  autonomy.py  chat.py  knowledge.py  memory.py  onboarding.py  reasoning.py  settings.py  tools.py  web_ai.py
backend/app/tools/: __init__.py  browser.py  fs.py  registry.py  shell.py  vision.py  web_ai.py  web_search.py
backend/app/web_ai/: __init__.py  auto_learner.py  client.py  presets.py  probe.py  profiles.py  provider.py  social.py
backend/tests/: test_app.py  test_keystore.py  test_launcher_features.py  test_new_modules.py  test_reasoning.py  test_router.py  test_web_ai.py
docs/: architecture.md  phase-3-roadmap.md  providers.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  (+1 more)
(+26 files in other folders)
